--- a/src/assets/css/variables.scss
+++ b/src/assets/css/variables.scss
@@ -5,4 +5,7 @@
     --background-color: #1E2127;
     --background-color-lighter: #292E37;
     --call-to-action: #FF0059;
+
+    --call-to-action-positive: #8fff76;
+    --call-to-action-negative: #ff5252;
 }
